Updated readme with dark theme vs light theme

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <div class="column is-2 is-one-quarter-mobile" id="leftCol">
             <!-- streamer info on table and below only the image will show -->
             <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
-            <div class="subtitle posterName">
+            <div id="streamerLeftNavName" class="subtitle posterName">
                Streamer placeholder Name
             </div>
          </div>
