--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
          </div>
       </div>
       <!-- end of top nav bar -->
+
       <!-- content wrapper that holds everything besides top nav -->
       <div class="contentBox">
       <div class="columns is-mobile">
@@ -105,7 +106,7 @@
                      <header class="card-header">
                         <div class="card-header-title" >
                            <div class="media-content">
-                              <p class="subtitle is-6" id="streamerTextPost">Featured Boradcasters</p>
+                              <p class="subtitle is-6" id="streamerTextPost">Featured Broadcasters</p>
                            </div>
                         </div>
                      </header>
