working on the right part of nav bar. Still need to fix scaling

--- a/index.html
+++ b/index.html
@@ -33,8 +33,29 @@
                   <p class="control">
                      <input class="input" id="input" type="text" placeholder="Search Twitch Clone">
                   </p>
+             </div>
+             <div class="navbar-end">
+               <div class="navbar-item">
+                <p class="title is-7" id="streamerTextPost">PRIME</p>
+               </div>
+              <div class="navbar-item">
+                <div class="navbar-item">
+                 <p class="title is-7" id="streamerTextPost">ALERTS</p>
+                </div>
+             </div>
+             <div class="navbar-item lastItem">
+               <img id="streamerImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/39594051-65fb-4750-b560-16702c87b1ae-profile_image-70x70.png" alt="">
+               <div class="media-content">
+                 <div class="downArrow">
+                   v
+                 </div>
+                  <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                  <p class="subtitle is-6" id="streamerTextPost">Online</p>
                </div>
             </div>
+             </div>
+            </div>
+
          </div>
       </div>
       <!-- end of top nav bar -->
