fixed navbar scaling

--- a/index.html
+++ b/index.html
@@ -14,35 +14,33 @@
       <div class="navbarContainer" id="navbarContainer">
          <div class="navbar" id="navbarContainer">
             <div class="navbar-brand" id="navbarContainer">
-               <div class="navbar-item">
+               <div class="navbar-item leftNavShow">
                   <img src="https://vignette.wikia.nocookie.net/logopedia/images/2/26/Twitch_logo.svg/revision/latest?cb=20140727180649" alt="">
                </div>
-               <div class="navbar-item">
+               <div class="navbar-item leftNavShow">
                   <h2>Following</h2>
                </div>
-               <div class="navbar-item">
+               <div class="navbar-item leftNavShow">
                   <h2>Browse</h2>
                </div>
-               <div class="navbar-item">
+               <div class="navbar-item leftNavShow">
                   <h2>Get Desktop</h2>
                </div>
-               <div class="navbar-item">
+               <div class="navbar-item leftNavShow">
                   <h2>Store</h2>
                </div>
-               <div class="navbar-item">
+               <div class="navbar-item leftNavShow">
                   <p class="control">
                      <input class="input" id="input" type="text" placeholder="Search Twitch Clone">
                   </p>
              </div>
              <div class="navbar-end">
-               <div class="navbar-item">
+               <div class="navbar-item rightNavHide">
                 <p class="title is-7" id="streamerTextPost">PRIME</p>
                </div>
-              <div class="navbar-item">
-                <div class="navbar-item">
+                <div class="navbar-item rightNavHide">
                  <p class="title is-7" id="streamerTextPost">ALERTS</p>
-                </div>
-             </div>
+               </div>
              <div class="navbar-item lastItem">
                <img id="streamerImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/39594051-65fb-4750-b560-16702c87b1ae-profile_image-70x70.png" alt="">
                <div class="media-content">
