--- a/index.html
+++ b/index.html
@@ -30,6 +30,63 @@
                   <h2>Store</h2>
                </div>
                <div class="navbar-item leftNavShow">
+                 <div class="dropdown is-hoverable">
+                  <div class="dropdown-trigger">
+                      <h2 id="drpDown" aria-haspopup="true" aria-controls="dropdown-menu">...</h2>
+                  </div>
+                  <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                    <div class="dropdown-content" id="dropdown-content">
+                      <a href="#" class="dropdown-item" id="dropdown-content">
+                        Dropdown item
+                      </a>
+                      <a class="dropdown-item"id="dropdown-content">
+                        About
+                      </a>
+                      <a href="#" class="dropdown-item is-active"id="dropdown-content">
+                        Advertisers
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Blog
+                      </a>
+                      <!-- <hr class="dropdown-divider"> -->
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Cookie Policy
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Creative
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Developers
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Help
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Jobs
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Language
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Music
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Partners
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Press
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Security
+                      </a>
+                      <a href="#" class="dropdown-item"id="dropdown-content">
+                        Terms
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+               <div class="navbar-item leftNavShow">
                   <p class="control">
                      <input class="input" id="input" type="text" placeholder="Search Twitch Clone">
                   </p>
@@ -42,15 +99,47 @@
                  <p class="title is-7" id="streamerTextPost">ALERTS</p>
                </div>
              <div class="navbar-item lastItem">
-               <img id="streamerImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/39594051-65fb-4750-b560-16702c87b1ae-profile_image-70x70.png" alt="">
-               <div class="media-content">
-                 <div class="downArrow">
-                   v
+               <div class="dropdown is-hoverable userInfoWidth" >
+                <div class="dropdown-trigger userInfoWidth">
+                  <button class="button userInfoWidth" id="drpDown" aria-haspopup="true" aria-controls="dropdown-menu">
+                         <img id="streamerImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/39594051-65fb-4750-b560-16702c87b1ae-profile_image-70x70.png" alt="">
+                           <div class="media-content userInfo">
+                           <div class="downArrow">
+                             v
+                           </div>
+                            <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                            <p class="subtitle is-6" id="streamerTextPost">Online</p>
+                         </div>
+                       </button>
+                     </div>
+                     <div class="dropdown-menu userInfoWidth" id="dropdown-menu" role="menu">
+                       <div class="dropdown-content" id="dropdown-content">
+                         <a href="#" class="dropdown-item" id="dropdown-content">
+                           placeholder
+                         </a>
+                         <a class="dropdown-item"id="dropdown-content">
+                           placeholder
+                         </a>
+                         <a href="#" class="dropdown-item is-active"id="dropdown-content">
+                           placeholder
+                         </a>
+                         <a href="#" class="dropdown-item"id="dropdown-content">
+                           placeholder
+                         </a>
+                         <!-- <hr class="dropdown-divider"> -->
+                         <a href="#" class="dropdown-item"id="dropdown-content">
+                           placeholder
+                         </a>
+                         <a href="#" class="dropdown-item"id="dropdown-content">
+                           placeholder
+                         </a>
+                         <a href="#" class="dropdown-item"id="dropdown-content">
+                           placeholder
+                         </a>
+                         </div>
+                     </div>
+                   </div>
                  </div>
-                  <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                  <p class="subtitle is-6" id="streamerTextPost">Online</p>
-               </div>
-            </div>
              </div>
             </div>
 
@@ -68,6 +157,7 @@
             <div id="streamerLeftNavName" class="subtitle posterName">
                Streamer placeholder Name
             </div>
+
          </div>
          <!-- this column takes up the remainding space that the side nav isnt -->
          <div class="column">
