left nav bar as well as left searchbar

--- a/index.html
+++ b/index.html
@@ -153,11 +153,45 @@
          <!-- left side nav bar -->
          <div class="column is-2 is-one-quarter-mobile" id="leftCol">
             <!-- streamer info on table and below only the image will show -->
-            <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
-            <div id="streamerLeftNavName" class="subtitle posterName">
-               Streamer placeholder Name
+            <div class="followingStreamer">
+              <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
+              <div id="streamerLeftNavName" class="subtitle posterName">
+                 Streamer placeholder Name
+              </div>
             </div>
-
+            <div class="followingStreamer">
+              <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
+              <div id="streamerLeftNavName" class="subtitle posterName">
+                 Streamer placeholder Name
+              </div>
+            </div>
+            <div class="followingStreamer">
+              <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
+              <div id="streamerLeftNavName" class="subtitle posterName">
+                 Streamer placeholder Name
+              </div>
+            </div>
+            <div class="followingStreamer">
+              <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
+              <div id="streamerLeftNavName" class="subtitle posterName">
+                 Streamer placeholder Name
+              </div>
+            </div>
+            <div class="followingStreamer">
+              <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
+              <div id="streamerLeftNavName" class="subtitle posterName">
+                 Streamer placeholder Name
+              </div>
+            </div>
+            <div class="followingStreamer">
+              <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
+              <div id="streamerLeftNavName" class="subtitle posterName">
+                 Streamer placeholder Name
+              </div>
+            </div>
+            <p class="control leftSearch">
+               <input class="input" id="input" type="text" placeholder="Search to Add Friends">
+            </p>
          </div>
          <!-- this column takes up the remainding space that the side nav isnt -->
          <div class="column">
