touched up left nav more

--- a/index.html
+++ b/index.html
@@ -156,39 +156,107 @@
             <div class="followingStreamer">
               <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
               <div id="streamerLeftNavName" class="subtitle posterName">
-                 Streamer placeholder Name
+                <div class="media-content">
+
+                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="streamerTextPost">
+                     Game Playing
+                     <span class="leftNavViewerCount">
+                      viewer count
+                     </span>
+                   </p>
+                </div>
               </div>
+
             </div>
             <div class="followingStreamer">
               <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
               <div id="streamerLeftNavName" class="subtitle posterName">
-                 Streamer placeholder Name
+                <div class="media-content">
+
+                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="streamerTextPost">
+                     Game Playing
+                     <span class="leftNavViewerCount">
+                      viewer count
+                     </span>
+                   </p>
+                </div>
               </div>
+
             </div>
             <div class="followingStreamer">
               <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
               <div id="streamerLeftNavName" class="subtitle posterName">
-                 Streamer placeholder Name
+                <div class="media-content">
+
+                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="streamerTextPost">
+                     Game Playing
+                     <span class="leftNavViewerCount">
+                      viewer count
+                     </span>
+                   </p>
+                </div>
               </div>
+
             </div>
             <div class="followingStreamer">
               <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
               <div id="streamerLeftNavName" class="subtitle posterName">
-                 Streamer placeholder Name
+                <div class="media-content">
+
+                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="streamerTextPost">
+                     Game Playing
+                     <span class="leftNavViewerCount">
+                      viewer count
+                     </span>
+                   </p>
+                </div>
               </div>
+
             </div>
             <div class="followingStreamer">
               <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
               <div id="streamerLeftNavName" class="subtitle posterName">
-                 Streamer placeholder Name
+                <div class="media-content">
+
+                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="streamerTextPost">
+                     Game Playing
+                     <span class="leftNavViewerCount">
+                      viewer count
+                     </span>
+                   </p>
+                </div>
               </div>
+
             </div>
             <div class="followingStreamer">
               <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
               <div id="streamerLeftNavName" class="subtitle posterName">
-                 Streamer placeholder Name
+                <div class="media-content">
+
+                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="streamerTextPost">
+                     Game Playing
+                     <span class="leftNavViewerCount">
+                      viewer count
+                     </span>
+                   </p>
+                </div>
               </div>
             </div>
+            <p class="subtitle is-6 friendListText" id="streamerTextPost">
+              Online Friends
+            </p>
+            <hr id="hr">
+            <img src="https://cdn0.iconfinder.com/data/icons/iphone-black-people-svg-icons/30/clients_client_user_male_earth_man_list_customer_windows-512.png" alt="">
+
+            <p class="subtitle is-6 friendText" id="streamerTextPost">
+              None of your friends appear to be online
+            </p>
             <p class="control leftSearch">
                <input class="input" id="input" type="text" placeholder="Search to Add Friends">
             </p>
