--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
                 </div>
               </div>
             </div>
-            <p class="subtitle is-6 friendListText" id="streamerTextPost">
+            <p class="subtitle is-6 friendListText leftNavHide" id="streamerTextPost">
               Online Friends
             </p>
             <hr id="hr">
-            <img src="https://cdn0.iconfinder.com/data/icons/iphone-black-people-svg-icons/30/clients_client_user_male_earth_man_list_customer_windows-512.png" alt="">
+            <img class="leftNavHide" src="https://cdn0.iconfinder.com/data/icons/iphone-black-people-svg-icons/30/clients_client_user_male_earth_man_list_customer_windows-512.png" alt="">
 
-            <p class="subtitle is-6 friendText" id="streamerTextPost">
+            <p class="subtitle is-6 friendText leftNavHide" id="streamerTextPost">
               None of your friends appear to be online
             </p>
             <p class="control leftSearch">
