text post added

--- a/index.html
+++ b/index.html
@@ -266,6 +266,18 @@
             <!-- within the column there will be two content columns -->
             <div id ="twoContContainer" class="columns">
                <div id="leftCont" class="column is-5 linked-scrollbar-fixed">
+                 <!-- post something  -->
+                 <div id="middleContent" class="card postSomething">
+
+                    <textarea class="textinput postSomethingInput" id="input" type="text" placeholder="Share a clip or video with your followers by adding links from Twitch, Vimeo, and YouTube."></textarea>
+
+                    <!-- users reactions -->
+                    <div class="follow">
+                       <button type="button" name="button" id"followbutn" class="postBtn">Post</button>
+                    </div>
+                    <img class="optionsImage" src="https://www.shareicon.net/download/2017/02/09/878626_gear_512x512.png">
+                 </div>
+                 <!--  -->
                   <div id="middleContent" class="card">
                      <header class="card-header">
                         <div class="card-header-title" >
